add phonegap script reference
<script src="phonegap.js"></script> added to line 38

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <script src="js/vimeo.js"></script>
 
+<script src="phonegap.js"></script>
+
 <!-- Google Analytics -->
 
 <script type="text/javascript" src="js/ga.js"></script>
