Fixed merge issues and removed unnecessary files. Moved jquery from CDN to self-hosted within app. Updated Readme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="utf-8">
 
-<title></title>
+<title>wccc.tv</title>
 
 <meta name="description" content="Watch all the same great local programming produced by the WCCC-TV staff that is airing live, right now, on Waco’s Cable TV Channel or select from our large library of programs categorized in more than 20 different series topics and watch them on demand.">
 
@@ -17,7 +17,7 @@
 
 <!-- Stylesheets -->
 
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
+<link rel="stylesheet" href="css/jquery.mobile-1.1.1.min.css" />
 
 <link rel="stylesheet" href="css/normalize.css">
 
@@ -27,33 +27,15 @@
 
 <!-- Scripts -->
 
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+<script src="js/jquery-1.7.1.min.js"></script>
 
-<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
+<script src="js/jquery.mobile-1.1.1.min.js"></script>
 
 <script src="js/vendor/modernizr-2.6.1.min.js"></script>
 
 <script src="js/vimeo.js"></script>
 
 <script src="phonegap.js"></script>
-
-<!-- Google Analytics -->
-
-<script type="text/javascript" src="js/ga.js"></script>
-
-    <script>
-
- var _gaq = _gaq || [];
-
-    _gaq.push(['_setAccount', '35656636-1']);
-
-    _gaq.push(['_setDomainName', 'none']);
-
-    _gaq.push(['_trackPageview', 'wccc.tv mobile']);
-
-</script>
-
-
 
 </head>
 
@@ -286,20 +268,6 @@
 <!-- SCRIPTS -->
 
     <script src="js/helper.js"></script>
-
-    <!-- Google Analytics -->
-
-    <!--<script>
-
-        var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
-
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-
-        g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-
-        s.parentNode.insertBefore(g,s)}(document,"script"));
-
-    </script>-->
 
 </body>
 
