update to new HTML5 video player

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
                     <h2>WCCC.TV Live Stream</h2>
 
-                    <script type="text/javascript" src="http://cdn.frontlayer.net/apps/libs/swfobject/2.2/swfobject.js"></script><script type="text/javascript">if(swfobject.hasFlashPlayerVersion("1")){ document.write('<P ALIGN=center><object width="100%" height="400px"> <param name="movie" value="http://cdn.frontlayer.net/apps/players/zeri/SMP16SR176354002.swf"></param><param name="flashvars" value="configuration=http%3A%2F%2Flive-h1.frontlayer.net%2Fsmpcfg%2Fcva6921.xml"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><param name="wmode" value="direct"></param><embed src="http://cdn.frontlayer.net/apps/players/zeri/SMP16SR176354002.swf" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" wmode="direct" width="100%" height="400" flashvars="configuration=http%3A%2F%2Flive-h1.frontlayer.net%2Fsmpcfg%2Fcva6921.xml"></embed></object></P>');} else {document.write('<P ALIGN=center><video controls src="http://live-h1.frontlayer.net/cva6921/smil:live.smil/live.m3u8" width="100%" height="400"></video></P>');}</script>
+                    <video controls src="http://live-h1.frontlayer.net/fl649215/smil:live.smil/live.m3u8" width="360" height="203"></video>
 
                     <p>Can’t see the live stream? Press the button below to stream our channel on our website:</p>
 
