loading individual videos with jquery and added iframe video embedding

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </header>
         </a>
         <section data-role="content">
-            <div id="vimeo"><img src="img/loader.gif" alt="loader" width="60"></div>
+            <div id="vimeo"><img src="img/loader.gif" alt="loader" width="60" class="loader"></div>
         </section>
         <footer data-role="footer" data-position="fixed">            
             <nav data-role="navbar">
