--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section data-role="content">
             <article class="box">
                 <h2>About this App</h2>
-                <p><em>Version 1.3.2</em></p>
+                <p><em>Version 1.3.1</em></p>
                 <p>Check out our featured videos with the WCCC.TV (Waco City Cable Channel) app!</p>
                 <p>Enjoy exciting local programs and short segments on the people, places, history, events, music and more from Waco.</p>
                 <p>Watch our live stream to see what is airing right now (in HD) on our cable channel.</p>
@@ -115,11 +115,12 @@
             <div id="vimeo">
                 <div class="wrap">
                     <h2>WCCC.TV Live Stream</h2>                    
-                    <video id="example_video_1" class="video-js vjs-default-skin"
+                    <!--<video id="example_video_1" class="video-js vjs-default-skin"
                     controls preload="auto" width="100%" height="200"
                     data-setup='{"example_option":true}'
                     src="http://live-h1.frontlayer.net/fl649215/smil:live.smil/live.m3u8">
-                    </video>
+                    </video>-->
+                    <iframe src="http://player.frontlayer.com/live/fl649215" width="100%" height="auto" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="live-player"></iframe>
                     <p>Can’t see the live stream? Press the button below to stream our channel on our website:</p>
                     <a href="http://wccc.tv/index.php?DoThis=Live" data-role="button">View Live Stream Online</a>
                 </div><!-- wrap -->
