--- a/index.html
+++ b/index.html
@@ -114,13 +114,11 @@
         <section data-role="content">
             <div id="vimeo">
                 <div class="wrap">
-                    <h2>WCCC.TV Live Stream</h2>                    
-                    <!--<video id="example_video_1" class="video-js vjs-default-skin"
-                    controls preload="auto" width="100%" height="200"
-                    data-setup='{"example_option":true}'
-                    src="http://live-h1.frontlayer.net/fl649215/smil:live.smil/live.m3u8">
-                    </video>-->
-                    <iframe src="http://player.frontlayer.com/live/fl649215" width="100%" height="auto" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="live-player"></iframe>
+                    <h2>WCCC.TV Live Stream</h2>
+					
+					<iframe src="http://player.frontlayer.com/live/embeds/fl649215?w=640&h=360" width="640" height="360" frameborder="0" scrolling="no"></iframe>
+
+                    <!--<iframe src="http://player.frontlayer.com/live/fl649215" width="100%" height="auto" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="live-player"></iframe>-->
                     <p>Can’t see the live stream? Press the button below to stream our channel on our website:</p>
                     <a href="http://wccc.tv/index.php?DoThis=Live" data-role="button">View Live Stream Online</a>
                 </div><!-- wrap -->
