--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul>
             		<li><a href="#about" data-role="button" data-icon="info">About</a></li>
                     <li><a href="#live" data-role="button" data-icon="star">Live</a></li>
-                    <li><a href="http://wccc.tv" data-role="button" data-icon="grid">Website</a></li>
+                    <li><a href="http://wccc.tv" data-role="button" data-icon="grid" target="_blank">Website</a></li>
             	</ul>
             </nav>
         </footer>
@@ -75,7 +75,7 @@
         <section data-role="content">
             <article class="box">
                 <h2>About this App</h2>
-                <p><em>Version 1.3.3</em></p>
+                <p><em>Version 1.3.3.1</em></p>
                 <p>Check out our featured videos with the WCCC.TV (Waco City Cable Channel) app!</p>
                 <p>Enjoy exciting local programs and short segments on the people, places, history, events, music and more from Waco.</p>
                 <p>Watch our live stream to see what is airing right now (in HD) on our cable channel.</p>
@@ -84,12 +84,12 @@
                 <ul data-role="listview" data-inset="true">
                     <li data-role="divider" role="heading">WCCC.TV Online</li>
                     <li><a href="#live">WCCC.TV Live Stream</a></li>
-                    <li><a href="http://wccc.tv">WCCC.TV Homepage</a></li>
-                    <li><a href="http://wccc.tv/index.php?DoThis=Albums">Select a Program</a></li>
-                    <li><a href="http://wccc.tv/index.php?DoThis=Shorts">Select a Short Segment</a></li>
-                    <li><a href="http://wccc.tv/index.php?DoThis=Albums#talk_shows" rel="external">Watch a Talk Show</a></li>
+                    <li><a href="http://wccc.tv" target="_blank">WCCC.TV Homepage</a></li>
+                    <li><a href="http://wccc.tv/index.php?DoThis=Albums" target="_blank">Select a Program</a></li>
+                    <li><a href="http://wccc.tv/index.php?DoThis=Shorts" target="_blank">Select a Short Segment</a></li>
+                    <li><a href="http://wccc.tv/index.php?DoThis=Albums#talk_shows" rel="external" target="_blank">Watch a Talk Show</a></li>
                     <li data-role="divider" role="heading">Social Media</li>
-                    <li><a href="http://www.facebook.com/wccc.tv?ref=ts&amp;fref=ts">Visit us on Facebook</a></li>
+                    <li><a href="http://www.facebook.com/wccc.tv?ref=ts&amp;fref=ts" target="_blank">Visit us on Facebook</a></li>
                 </ul>
             </article>
         </section>
@@ -98,7 +98,7 @@
                 <ul>
             		<li><a href="#home" data-role="button" data-icon="home">Home</a></li>
                     <li><a href="#live" data-role="button" data-icon="star">Live</a></li>
-                    <li><a href="http://wccc.tv" data-role="button" data-icon="grid">Website</a></li>
+                    <li><a href="http://wccc.tv" data-role="button" data-icon="grid" target="_blank">Website</a></li>
             	</ul>
             </nav>
         </footer>
@@ -129,7 +129,7 @@
                 <ul>
                 	<li><a href="#home" data-role="button" data-icon="home">Home</a></li>
                     <li><a href="#about" data-role="button" data-icon="info">About</a></li>
-                    <li><a href="http://wccc.tv" data-role="button" data-icon="grid">Website</a></li>
+                    <li><a href="http://wccc.tv" data-role="button" data-icon="grid" target="_blank">Website</a></li>
             	</ul>
             </nav>
         </footer>
